--- a/top-right.html
+++ b/top-right.html
@@ -83,9 +83,9 @@
     
     <script>
         //***edit this only for your information***
-        const player = "RYAN KINGSTON";
+        const player = "VOR NACHNAME";
         const agency = "LOS SANTOS FIRE DEPARTMENT";
-        const callsign = "[FD-29]";
+        const callsign = "[FD-XX]";
         //***        end edit this only         ***
     
         var d,h,m,s,animate;
